Kubernetes_part/kubernetes_postgres/pub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-pub-service
spec:
  selector:
    app: voting-pub
  ports:
  - port: 80
    targetPort: 8000
  type: NodePort
